add: complete main task

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dmitrij Menkowski - Recruitment task</title>
     <link rel="stylesheet" href="/dist/main.css">
+    <link rel="shortcut icon" href="/images/favicon.png">
 </head>
+
 <body>
     <main>
         <section class="first-section wrapper">
             <div class="box">
-                <img src="/images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg" alt="ocean and beach with sunset">
+                <img src="/images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
+                    alt="ocean and beach with sunset">
                 <div class="text-box">
                     <h1 class="paragraph">Lorem Ipsum</h1>
-                    <p class="text">Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+                    <p class="text">Infinitely scalable, feature-rich and cloud-native data management and protection
+                        for modern and legacy infrastructures and SaaS platforms, managed via a single app with no
+                        hardware required.</p>
                     <button class="primary-btn" type="button">Button</button>
                 </div>
             </div>
@@ -24,16 +30,20 @@
         <div class="window-body">
             <div class="window-title">
                 <h2 class="paragraph">Alert!</h2>
-                <button type="button">
+                <button class="close-btn" type="button">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M18 6L6 18" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M6 6L18 18" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <path d="M18 6L6 18" stroke="black" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M6 6L18 18" stroke="black" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
                 </button>
             </div>
             <div class="window-content">
                 <p class="text">You have clicked <span class="click-times">X times</span> to related button.</p>
+                <button class="primary-btn reset-counter" type="button">Reset counter</button>
             </div>
         </div>
     </div>
+    <script src="/src/js/main.js"></script>
 </body>
