add: complete additional task

--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
             <div class="window-content">
                 <p class="text">You have clicked <span class="click-times">X times</span> to related button.</p>
                 <button class="primary-btn reset-counter" type="button">Reset counter</button>
+                <div class="additional-task">
+                    <table>
+                        <tr>
+                            <th>Full Name</th>
+                            <th>Email</th>
+                            <th>Address</th>
+                            <th>Phone</th>
+                            <th>Company name</th>
+                        </tr>
+                    </table>
+                </div>
             </div>
+            <div class="loader"></div>
         </div>
     </div>
     <script src="/src/js/main.js"></script>
