--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dmitrij Menkowski - Recruitment task</title>
-    <link rel="stylesheet" href="/dist/main.css">
-    <link rel="shortcut icon" href="/images/favicon.png">
+    <link rel="stylesheet" href="./dist/main.css">
+    <link rel="shortcut icon" href="./images/favicon.png">
 </head>
 
 <body>
     <main>
         <section class="first-section wrapper">
             <div class="box">
-                <img src="/images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
+                <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
                     alt="ocean and beach with sunset">
                 <div class="text-box">
                     <h1 class="paragraph">Lorem Ipsum</h1>
@@ -57,5 +57,5 @@
             <div class="loader"></div>
         </div>
     </div>
-    <script src="/src/js/main.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
