fix: fix table tbody mistake

--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
                 <button class="primary-btn reset-counter" type="button">Reset counter</button>
                 <div class="additional-task">
                     <table>
-                        <tr>
-                            <th>Full Name</th>
-                            <th>Email</th>
-                            <th>Address</th>
-                            <th>Phone</th>
-                            <th>Company name</th>
-                        </tr>
+                        <tbody>
+                            <tr>
+                                <th>Full Name</th>
+                                <th>Email</th>
+                                <th>Address</th>
+                                <th>Phone</th>
+                                <th>Company name</th>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
